<resources>
    <string name="app_name">TilesBox</string>

    <!--caffeine-->
    <string name="pref_caffeine_cate">Caffeine</string>
    <string name="caffeine_pref_show_notif">Show foreground notification</string>
    <string name="caffeine_pref_notif_title">Notification Title</string>
    <string name="caffeine_pref_notif_text">Notification Text</string>

    <string name="caffeine_notif_title">Screen will remain on until turning off manually</string>
    <string name="caffeine_notif_text">Tap notification to stop</string>

    <!--qr code-->
    <string name="pref_qr_cate">Scan Qr Code</string>
    <string name="qr_pref_cate_action">Tile Action</string>
    <string name="qr_pref_action_click">Click</string>
    <string name="qr_pref_action_longclick">Press</string>

    <string name="qr_pref_action_camera">Scan Camera</string>
    <string name="qr_pref_action_screen">Scan Screen</string>
    <string name="qr_pref_action_wechat">WeChat Scanner</string>
    <string name="qr_pref_action_alipay">Alipay Scanner</string>
    <string name="qr_pref_action_settings">Open Settings</string>
    <string name="qr_pref_action_gallery">Open Gallery</string>
    <string name="qr_pref_action_alipay_pay">Alipay Payment Code</string>
    <string name="qr_pref_action_menu">Show Menu</string>
    <string-array name="qr_pref_action">
        <item>@string/qr_pref_action_camera</item>
        <item>@string/qr_pref_action_screen</item>
        <item>@string/qr_pref_action_wechat</item>
        <item>@string/qr_pref_action_alipay</item>
        <item>@string/qr_pref_action_alipay_pay</item>
        <item>@string/qr_pref_action_gallery</item>
        <item>@string/qr_pref_action_settings</item>
        <item>@string/qr_pref_action_menu</item>
    </string-array>
    <string-array name="qr_pref_action_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="qr_pref_open_direct">Open directly</string>
    <string name="qr_pref_hide_share">Hide from Share List</string>

    <string name="qr_toast_no_wechat">Cannot find WeChat</string>
    <string name="qr_toast_no_alipay">Cannot find Alipay</string>
    <string name="qr_toast_copied">Finish copy %s to Clipboard</string>
    <string name="qr_toast_no_result">Cannot find QRcode</string>

    <!--rotation-->
    <string name="pref_rotation_cate">Rotation</string>
    <string name="rotation_portrait">Portrait</string>
    <string name="rotation_landscape">Landscape</string>
    <string name="rotation_auto">Rotation Auto</string>
    <string name="rotation_pref_reverse_landscape">Reverse Landscape</string>

    <!--round corner-->
    <string name="pref_corner_cate">Rounded Corner</string>
    <string name="corner_pref_size">Corner size</string>
    <string name="corner_size">24</string>
    <string name="corner_pref_run_on_boot">Run on boot</string>

    <!--permit-->
    <string name="pref_cate_permit">Permissions</string>
    <string name="permit_write_system">Allow modify system settings</string>
    <string name="permit_float_window">Allow display over other apps</string>
    <string name="toast_no_permit">Missing permissions</string>

    <!--camera-->
    <string name="qr_frame_info">Align the QRcode within the frame to scan</string>
    <string name="qr_scan_wechat">WeChat Scanner</string>
    <string name="qr_scan_alipay">Alipay Scanner</string>

    <!--qr result-->
    <string name="qr_result_copy">Copy</string>
    <string name="qr_result_share">Share</string>
    <string name="qr_result_open">Open</string>

    <!--setting-->
    <string name="pref_cate_other">Miscellaneous</string>
    <string name="pref_tile_label">Tiles label</string>
    <string name="pref_hide_launcher">Hide from Launcher</string>
    <string name="pref_cate_about">About</string>
    <string name="pref_version_code">Version</string>

    <!--about-->
    <string name="about_dialog_title">About</string>
    <string name="about_dialog_message">
        Add following quick setting tiles to QuickSetting Panel on Androd N+\n
        1. Caffeine\n
        Keep screen on by toggle with single tap\n
        2. QrCode Scanner\n
        Scan screen QrCode or open QrCode Scanner Quickly\n
        3. Rotation\n
        Quickly toggle and lock screen orientation\n
        4. Round Corner\n
        Make screen corner rounded\n
    </string>
    <string name="about_dialog_support">Donate</string>
    <string name="about_dialog_github">GitHub</string>
    <string name="about_dialog_button">OK</string>
</resources>