<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="160dp">
        <ImageView
                android:id="@+id/result_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="fitXY"/>
    </ScrollView>

    <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:layout_height="wrap_content" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/result_copy"
                android:layout_weight="1"
                android:clickable="true"
                android:textColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/qr_result_copy"
                android:focusable="true"/>
        <TextView
                android:id="@+id/result_share"
                android:layout_weight="1"
                android:clickable="true"
                android:textColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/qr_result_share"
                android:focusable="true"/>
        <TextView
                android:id="@+id/result_open"
                android:layout_weight="1"
                android:clickable="true"
                android:textColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/qr_result_open"
                android:focusable="true"/>
    </LinearLayout>
</LinearLayout>