<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <soko.ekibun.tilesbox.view.CameraView
            android:id="@+id/camera_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    <LinearLayout
            android:id="@+id/actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:fitsSystemWindows="true"
            android:clipToPadding="false"
            android:background="@color/cameraAction">
        <TextView
                android:id="@+id/run_wechat"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/qr_scan_wechat"
                android:focusable="true"/>
        <TextView
                android:id="@+id/run_alipay"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/qr_scan_alipay"
                android:focusable="true"/>
    </LinearLayout>
    <View
            android:id="@+id/mask_status"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/cameraMask"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/mask_status"
            android:layout_above="@id/actions">
        <LinearLayout
                android:id="@+id/mask_frame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
            <View
                    android:id="@+id/scan_frame"
                    android:layout_width="256dp"
                    android:layout_height="256dp"
                    android:background="@drawable/qr_scan_frame"/>
            <TextView
                    android:id="@+id/textinfo"
                    android:gravity="center"
                    android:background="@color/cameraMask"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/qr_frame_info" />
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/mask_frame"
                android:background="@color/cameraMask"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@id/mask_frame"
                android:layout_alignBottom="@id/mask_frame"
                android:layout_toStartOf="@id/mask_frame"
                android:background="@color/cameraMask"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@id/mask_frame"
                android:layout_alignBottom="@id/mask_frame"
                android:layout_toEndOf="@id/mask_frame"
                android:background="@color/cameraMask"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/mask_frame"
                android:background="@color/cameraMask"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/mask_status"
            android:padding="6dp"
            android:background="@android:color/transparent">
        <ImageView
                android:id="@+id/gallery"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:src="@drawable/ic_gallery"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"/>
        <ImageView
                android:id="@+id/settings"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:src="@drawable/ic_settings"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"/>
    </LinearLayout>

    <ImageView
            android:id="@+id/floatingActionButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/shape_circle"
            android:padding="15dp"
            android:elevation="6dp"
            android:layout_above="@id/actions"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-30dp"
            android:clickable="true"
            android:src="@drawable/ic_lightbulb"/>
</RelativeLayout>